--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ authors = ["Rami3L <rami3l@outlook.com>"]
 ariadne = "0.1.5"
 chumsky = "0.8.0"
 derive_more = "0.99.17"
+itertools = "0.10.5"
 paste = "1.0.9"
+
+[dev-dependencies]
+indoc = "1.0.7"
