--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ authors = ["Rami3L <rami3l@outlook.com>"]
 [dependencies]
 ariadne = "0.1.5"
 chumsky = "0.8.0"
+delegate = "0.8.0"
 derive_more = "0.99.17"
+im = "15.1.0"
 itertools = "0.10.5"
 paste = "1.0.9"
+tap = "1.0.1"
 
 [dev-dependencies]
 indoc = "1.0.7"
