--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Brack", "Paren", "struct", "uncurry"]
+  "cSpell.words": [
+    "Bimap",
+    "Brack",
+    "Niveo",
+    "Paren",
+    "Relude",
+    "struct",
+    "uncurry",
+    "unwords"
+  ]
 }
