--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ default-extensions:
   - FlexibleInstances
   - FunctionalDependencies
   - GADTs
+  - LambdaCase
   - MultiParamTypeClasses
   - MultiWayIf
   - NamedFieldPuns
