--- a/stack.yaml
+++ b/stack.yaml
@@ -30,7 +30,8 @@ resolver: nightly-2022-09-25
 #   - wai
 packages:
   - .
-# Dependency packages to be pulled from upstream that are not in the resolver.
+
+  # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
@@ -40,9 +41,13 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
-  - diagnose-2.0.0@sha256:fdd95a13cdb49465f1bd178827cc1090cde1493599c07673acb3e15e517731f5,5721
+  - diagnose-2.0.1
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
+flags:
+  diagnose:
+    megaparsec-compat: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
