--- a/package.yaml
+++ b/package.yaml
@@ -61,16 +61,15 @@ default-extensions:
 dependencies:
   - base >= 4.7 && < 5
   - bimap
-  - diagnose
   - data-default
+  - diagnose
+  - effectful-core
   - extra
   - megaparsec
   - optics
   - relude
   - string-interpolate
-  - transformers
   - vector
-  - witch
 
 ghc-options:
   - -Wall
