--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ packages:
 #
 extra-deps:
   - diagnose-2.0.1
+  - effectful-core-2.1.0.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
