feat(app): impl language REPL

--- a/package.yaml
+++ b/package.yaml
@@ -70,12 +70,13 @@ dependencies:
   - bimap
   - data-default
   - diagnose
-  - effectful-core
+  - effectful
   - extra
   - megaparsec
   - optics
   - string-interpolate
   - vector
+  - witch
 
 ghc-options:
   - -Wall
