--- a/niveo.cabal
+++ b/niveo.cabal
@@ -74,13 +74,14 @@ library
     , bimap
     , data-default
     , diagnose
-    , effectful-core
+    , effectful
     , extra
     , megaparsec
     , optics
     , relude
     , string-interpolate
     , vector
+    , witch
   mixins:
       base hiding (Prelude)
     , relude (Relude as Prelude)
@@ -136,7 +137,7 @@ executable niveo-exe
     , bimap
     , data-default
     , diagnose
-    , effectful-core
+    , effectful
     , extra
     , haskeline
     , megaparsec
@@ -146,6 +147,7 @@ executable niveo-exe
     , relude
     , string-interpolate
     , vector
+    , witch
   mixins:
       base hiding (Prelude)
     , relude (Relude as Prelude)
@@ -205,7 +207,7 @@ test-suite niveo-test
     , bimap
     , data-default
     , diagnose
-    , effectful-core
+    , effectful
     , extra
     , megaparsec
     , niveo
@@ -218,6 +220,7 @@ test-suite niveo-test
     , tasty-quickcheck
     , tasty-smallcheck
     , vector
+    , witch
   mixins:
       base hiding (Prelude)
     , relude (Relude as Prelude)
