feat(parser): add more `range` info to `Expr`

--- a/niveo.cabal
+++ b/niveo.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Niveo
+      Niveo.Instances
       Niveo.Interpreter
       Niveo.Parser
   other-modules:
