--- a/niveo.cabal
+++ b/niveo.cabal
@@ -85,6 +85,7 @@ library
     , extra
     , megaparsec
     , optics
+    , parser-combinators
     , relude
     , string-interpolate
     , vector
@@ -156,6 +157,7 @@ executable niveo-exe
     , niveo
     , optics
     , optparse-applicative
+    , parser-combinators
     , relude
     , string-interpolate
     , vector
@@ -230,6 +232,7 @@ test-suite niveo-test
     , megaparsec
     , niveo
     , optics
+    , parser-combinators
     , regex-tdfa
     , relude
     , string-interpolate
