--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Aeson",
     "Bimap",
     "bitraverse",
     "Brack",
@@ -10,6 +11,7 @@
     "Paren",
     "Relude",
     "rword",
+    "Serde",
     "struct",
     "uncurry",
     "unwords"
