--- a/niveo.cabal
+++ b/niveo.cabal
@@ -90,6 +90,7 @@ library
     , effectful-th
     , exceptions
     , extra
+    , filepath
     , megaparsec
     , optics
     , parser-combinators
@@ -165,6 +166,7 @@ executable niveo-exe
     , effectful-th
     , exceptions
     , extra
+    , filepath
     , haskeline
     , megaparsec
     , niveo
@@ -248,6 +250,7 @@ test-suite niveo-test
     , effectful-th
     , exceptions
     , extra
+    , filepath
     , megaparsec
     , niveo
     , optics
